--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@ body, ul{
     margin: 0px;
     padding: 0px;
 }
-
-
+#header #menu a {
     color: rgb(67, 142, 228);
     text-decoration: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -52,6 +51,71 @@ body, ul{
 }
 #carouselExampleInerval{    
    position: relative;
+   width: 100%;
    z-index: 10;
    padding-top: 80px;
 }
+/* Estilo CSS banner */
+.section-banner-home {
+   width: 100%;
+   height: 500px;
+   margin-top: 10px;
+   padding: 50px;
+   background-color:#000000
+}
+.section-banner-home {
+   height: 400px;
+}
+.section-banner-home .texto-banner {
+   margin-top: 30px;
+   font-size: 22px;
+}
+.section-banner-home .texto-banner h1 {
+   font-size: 30px;
+   width: 60%;
+   font-weight: 500;
+   padding-bottom: 20px;
+}
+.section-banner-home .texto-bannerp {
+   font-size: 15px;
+   margin-bottom: 20px;
+}
+.section-banner-home .texto-banner a {
+   color: rgb(0, 0, 0);
+   text-decoration: none;
+   background-color: rgb(67, 142, 228);
+   padding: 4px 14px;
+   font-size: 15px;
+}
+/* fim CSS banner */
+
+/* CSS destaque */
+.destaque h2 {
+   margin-top: 15px;
+   text-align: center;
+   font-size: 14px;
+   margin: 30px bold;
+} 
+.destaque p {
+   width: 77%;
+   text-align: center;
+   font-size: 14px;
+   margin: 30px;
+}
+.destaque figcaption {
+   font-size: 13px;
+   color: #ffffff;
+   text-decoration: none;
+   font-weight: bold;
+   text-align: center;
+}
+.destaque a {
+   justify-content: center;
+   display: flex;
+   text-decoration: none;
+   color: rgb(67, 142, 228);
+   font-size: 18px;
+   font-weight: bold;
+   margin: 30px 0;
+}
+/* Fim CSS Destaque */
