--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=BebasNeue);
 /*Aula 01 01/04/23*/
 
 body, ul{
@@ -7,15 +8,22 @@ body, ul{
 #header #menu a {
     color: rgb(67, 142, 228);
     text-decoration: none;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.25rem;
-    transition: 0.3s;
+    font-family: 'Bebas Neue';
+    font-size: 2.0rem;
+    transition: 0.4s;
+    margin-right: 15px;
+}
+#header #menu a:hover{
+   color: rgb(255, 255, 255);
+   font-size: 2.20rem;
+   transition: 0.3s;
+   text-shadow: 4px 4px 6px #000000;
 }
 .link menu a:hover {
    background: rgba(0, 0, 0, 0, 0.05);
 }
 #logo img:hover {
-   box-shadow: 4px 4px 6px #9e9e9e7a;
+   box-shadow: 4px 4px 6px #111111dc;
    transition: 0.3s;
 }
 
@@ -31,7 +39,7 @@ body, ul{
 }
 #header{
    width: 100%;
-   position:fixed;
+   position:relative;
    z-index: 90;
    box-sizing: border-box;
    height: 80px;
@@ -39,29 +47,49 @@ body, ul{
    display: flex;
    align-items: center;
    justify-content: space-between;
-   background: #000000;
+   background: #111111dc;
+   box-shadow: 6px 6px 8px #000000d6;
+   transition: 0.3s;
 }
 #menu {
      display: flex;
      list-style: none;
      gap: 0.5rem
 }
-#bnt-mobile {
+#btn-mobile {
   display: none;
 }
-#carouselExampleInerval{    
+
+#carouselExampleIneterval{    
    position: relative;
    width: 100%;
    z-index: 10;
    padding-top: 80px;
 }
+
+#carrousselExempleInterval{
+   position: relative;
+   z-index: 10;
+   margin-left: 10px;
+   margin-right: 10px;
+   box-shadow: 6px 6px 8px rgb(67, 142, 228);
+   transition: 0.3s;
+   place-items: normal legacy;
+   margin-block: 10px;
+   height: auto;
+}
+#caroussselExempleInterval .carrousel-inner img{
+   max-height: 550px;
+   width: 100%;
+}
+
 /* Estilo CSS banner */
 .section-banner-home {
    width: 100%;
    height: 500px;
    margin-top: 10px;
    padding: 50px;
-   background-color:#000000
+   background-color:#111111dc
 }
 .section-banner-home {
    height: 400px;
@@ -75,17 +103,23 @@ body, ul{
    width: 60%;
    font-weight: 500;
    padding-bottom: 20px;
+   color:#e6e6e6 ;
 }
-.section-banner-home .texto-bannerp {
+.section-banner-home .texto-banner p {
    font-size: 15px;
    margin-bottom: 20px;
+   color: #e6e6e6;
 }
 .section-banner-home .texto-banner a {
-   color: rgb(0, 0, 0);
+   color: #111111dc;
    text-decoration: none;
    background-color: rgb(67, 142, 228);
    padding: 4px 14px;
    font-size: 15px;
+}
+.section-banner-home .texto-banner a:hover {
+   color: #000000;
+   text-shadow: 2px 2px 4px #00000091;
 }
 /* fim CSS banner */
 
@@ -104,7 +138,7 @@ body, ul{
 }
 .destaque figcaption {
    font-size: 13px;
-   color: #ffffff;
+   color: #000000;
    text-decoration: none;
    font-weight: bold;
    text-align: center;
@@ -119,3 +153,75 @@ body, ul{
    margin: 30px 0;
 }
 /* Fim CSS Destaque */
+
+/* CSS novidades */
+
+ .novidades .texte-body {
+   width: 80%;
+   margin: 70px auto;
+ }
+ .novidades h2 {
+   color: #000000;
+   font-size: 26px;
+   width: 70%;
+ }
+ .novidades p {
+   color: #000000;
+ }
+ .novidades a {
+   color: rgb(255, 255, 255);
+   text-decoration: underline;
+   text-decoration: color violet;
+   padding: 6px 12px;
+   background-color: rgb(0, 68, 194,);
+   font-weight: 400;
+ }
+ /* fim CSS novidades */
+
+ /* inicio CSS galerias */
+
+ .galeria {
+   margin: 60px auto 20px;
+ }
+ .galeriah2{
+   text-align: center;
+   font-size: 24px;
+ }
+ .galeria p {
+   text-align: center;
+   width: 50%;
+   margin: 14px auto 50px;
+ }
+ .galeria .galery{
+   width: 30%;
+   margin:  14px auto 50px;
+ }
+ /* fim CSS galerias */
+ /* inicio CSS footer */
+
+ .rodape  {
+   padding: 50px 50px 0;
+ }
+ .rodape .info-contato p {
+   margin: 0px;
+ }
+ .rodape a {
+   text-decoration: none;
+   color: #000000;
+   font-size: 13px;
+ }
+ .rodape a:hover {
+   font-weight: bold;
+ }
+ .rodape .rede-sociais {
+   display: inline-block;
+ }
+ .rodape .rede-sociais img {
+   width: 45px;
+   height: 40px;
+ }
+ .rodape p.direitos {
+   text-align: center;
+   margin-top: 40px;
+ }
+ 
