--- a/css/style.css
+++ b/css/style.css
@@ -345,9 +345,152 @@ body, ul{
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.446);
 }
 .embed-contaier .col-lg-4 {
-   margin-top: 20px;
+   margin-top: 15px;
+}
+.embed-container .col-lg-6 { 
+   margin-top: 10px;
+}
+/* Fim CSS Streaming */
+
+/* Inicio CSS Contato */
+.contato {
+   margin-top: 50px;
+}
+.form_main {
+   width: 100%;
+}
+.form_main h4 {
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-size: 20px;
+   font-weight: 300;
+   margin-top: 22px;
+   margin-bottom: 15px;
+   text-transform: uppercase;
+}
+.col-md-6 #txt-local {
+   border-bottom: 1px solid #111111dc;
+   margin-bottom: 16px;
+   position: relative;
+}
+.text-left {
+   border-bottom: 1px solid #ccc;
+   padding-bottom: 9px;
+   position: relative;
+}
+.text-left span {
+   background: #111e8d none repeted scroll 0 0;
+   bottom: -2px;
+   height: 3px;
+   left: 0;
+   position: absolute;
+   width: 0px;
+}
+.form-horizontal {
+   border-radius: 107px;
+   padding: 6px;
+}
+.form-control [type="text"] {
+   border: 1px solid #ccc;
+   margin: 10px 0;
+   padding: 10px 0 10px 5px;
+   width: 100%;
+}
+.form-control [type="email"] {
+   border: 1px solid #ccc;
+   margin: 10px 0;
+   padding: 10px 0 10px 5px;
+   width: 100%;
+}
+.form-control-msg[type="text"] {
+   margin: 10px 0 0;
+   padding: 10px 0 10px 5px;
+   width: 100%;
+}
+.formbutton[type="submit"] {
+   -moz-box-shadow: inset 0px 1px 0px 0px #87c0e6;
+   -webkit-box-shadow: inset 0px 1px 0px 0px #87c0e6;
+   box-shadow: inset 0px 1px 0px 0px #87c0e6;
+   background-color: #297ee6;
+   display: inline-block;
+   border: 1px solid #2489d6;
+   border-radius: 25px;
+   color: #fff;
+   font-size: 16px;
+   font-style: normal;
+   line-height: 35px;
+   margin:10px 0;
+   padding: 0;
+   text-transform: uppercase;
+   width: 30%;
+}
+.formbutton:hover {
+   background-color: #31a1de;
+}
+.formbutton:active {
+   position: relative;
+   top:1px;
+}
+.txt2:hover {
+   background-color: rgba(0, 0, 0, 0)
+   none repeat scroll 0 0;
+   color: #5793ef;
+   transition: all 0.5 ease 0s;
+} 
+/* fim CSS Contato */
+
+/* Inicio CSS Map */
+.map {
+   width: 100%;
+   height: 300px;
+}
+.map iframe {
+   width: 100%;
+   height: 100%;
+}
+/* Fim CSS Map */
+
+/* inicio CSS whats */
+.whatsapp {
+   position: fixed;
+   z-index: 2;
+   /* top 200px */
+   right: 20px;
+   bottom: 10px;
+}
+.whatsapp img {
+   height: 60px;
+}
+/* inicio efeito pulse */
+
+.whatsapp .pulse {
+   animation: pulse 0.7s infinite;
+   margin: 0 auto;
+   display: table;
+   margin-top: 50px;
+   animation-direction: alternate;
+   -webkit-animation-name: pulse;
+   animation-name: pulse;
+}
+@-webkit-keyframes pulse {
+   0% {
+      -webkit-transform: scale (1);
+      -webkit-filter: brightness(100%);
+   }
+   100% {
+      -webkit-transform: scale (1.1);
+      -webkit-filter: brightness(110%);
+   }
+}
+@keyframes pulse {
+   0% {
+      transform:scale(1);
+      filter:  brightness(100%);
+   }
+   100% {
+      transform: scale(1.1);
+      filter:  brightness(110%);
+   }   
 }
 
-.embed-container .col-lg-6 {
-   margin-top: 20px;
-}
+
+/* fim CSS whats */
